--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     }
     .image-after { z-index:1 }
     .image-before {
-      /* clip off right half at start */
       clip-path: inset(0 50% 0 0);
       transition: clip-path 0.2s ease;
       z-index:2;
@@ -59,26 +58,44 @@
       touch-action: none;
       -webkit-appearance:none;
       appearance:none;
+      outline:none; /* no focus ring */
     }
-    /* track must be full height too */
+    /* track */
     .slider::-webkit-slider-runnable-track {
-      width:100%; height:100%; background:transparent;
+      -webkit-appearance:none;
+      appearance:none;
+      width:100%; height:100%;
+      background:transparent;
+      border: none;
+      box-shadow: none;
     }
     .slider::-moz-range-track {
-      width:100%; height:100%; background:transparent;
+      width:100%; height:100%;
+      background:transparent;
+      border: none;
+      box-shadow: none;
     }
-    /* give the thumb some area to grab */
+    /* thumb */
     .slider::-webkit-slider-thumb {
       -webkit-appearance:none;
-      width: 40px;        /* wide enough to touch */
-      height: 100%;       /* full height */
+      appearance:none;
+      width: 40px;
+      height: 100%;
       background: transparent;
+      border: none;
+      box-shadow: none;
     }
     .slider::-moz-range-thumb {
       width: 40px;
       height: 100%;
       background: transparent;
       border: none;
+      box-shadow: none;
+    }
+    /* Firefox filled portion (just in case) */
+    .slider::-moz-range-progress {
+      background: transparent !important;
+      box-shadow: none !important;
     }
 
     /* dividing line & custom handle */
